--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,8 @@ code {
 /*/Webkit (Chrome, Safari)*/
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   .buttonSafari {
-    bottom: 15px;
+    position: relative;
+    bottom: 3px;
   }
 }
 
@@ -75,4 +76,8 @@ code {
   .buttonSafari {
     bottom: 0px;
   }
+}
+
+.removeUnderline {
+  text-decoration: none !important;
 }
